# patentsweeper

./: .gitignore  README.md  cc-by-nc-4.0.md  docker-compose.yml  package-lock.json
.devcontainer/python-container/: devcontainer.json
FE/: README.md  package-lock.json  package.json  tsconfig.json
FE/src/app/: globals.css  layout.tsx  page.tsx
FE/src/app/componenets/: PdfPreview.tsx  Sidebar.css  homepage.tsx  sidebar.tsx
FE/src/app/dashboard/: page.tsx
FE/src/app/dashboard/components/: fileUploader.css  fileUploader.tsx
FE/src/app/dashboard/loading/: loading.css  page.tsx
FE/src/app/dashboard/minesweeper/: page.tsx
FE/src/app/dashboard/results/: page.tsx  results.css
FE/src/app/dashboard/results/components/: patent-card.tsx  pie-chart.css  pie-chart.tsx
FE/src/app/dashboard/upload/: page.tsx
FE/src/app/icons/: hammer.tsx  house.tsx
FE/src/app/store/: bestPatentsSlice.tsx  keywordsSlice.tsx  pdfDataSlice.tsx  queryIdSlice.tsx  store.tsx  storeProvider.tsx  types.tsx
backend/: README.md  pyproject.toml  test_pg_connection.py
backend/app/: config.py  database.py  main.py  utils.py
backend/app/features/: best_patent_retrieve.py  compare_patents.py  keywords_extractions.py  patent_search.py  pdf_upload.py
backend/app/migrations/: 01_initial_schema.sql
