[tool.poetry]
name = "patent-search-backend"
version = "0.1.0"
description = "FastAPI backend for patent search tool"
authors =  ["Shula Mukshim"]
packages = [{ include = "app", from = "." },
            { include = "features", from = "./app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.26.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.1"
pypdf2 = "^3.0.1"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
langchain = "^0.2.6"
langchain-groq = "^0.1.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
